# slepau

./: .gitignore  .gitmodules  Cargo.toml  readme.md  readme_standalone.md  rustfmt.toml  standalone.sh  standalone_readme.md  standalone_run.sh
.cargo/: config.toml
common/: Cargo.toml
common/src/: cache.rs  ends.rs  http.rs  lib.rs  proquint.rs  samn.rs  socket.rs  sonnerie.rs  utils.rs  vreji.rs
common/src/init/: backup.rs  magic_bean.rs  mod.rs
config/: dev.toml  prod.toml  regex.toml
config/auth/: dev.toml
config/chunk/: dev.toml
config/media/: dev.toml
config/nginx/: nginx.conf  nginx.sh
config/nginx/locations/: auth  media  stream
config/nginx/sites/: 0_lasna_server.conf  auth.conf  auth.location  chunk.conf  gibos.conf  lasna.conf  login.location  media.conf  media.location  monolithic.conf  samn.conf  slepau.part  stream.part  talebox.conf  vreji.conf  web.location  zarci.conf
config/samn/: dev.toml
config/vreji/: dev.toml
container/: .gitignore  Auth.dockerfile  Dockerfile  armv7hf.dockerfile  auth.dockerfile  chunk.dockerfile  env.config  gen_key.dockerfile  media.dockerfile  musl_builder.dockerfile  nginx.dockerfile  rethinkdb.dockerfile  slepau.dockerfile  vreji.dockerfile  x86.dockerfile
scripts/: build.nu  deploy.nu  docker.nu  env.nu  source.nu  start.nu  start.sh  status.nu  stop.nu
slepau/auth/: Cargo.toml
slepau/auth/src/: ends.rs  lib.rs  main.rs  validate.rs
slepau/auth/src/db/: data.rs  delete.rs  get.rs  mod.rs  modify.rs  new.rs  site.rs  stats.rs  tests.rs
slepau/auth/src/ends/: admin.rs  mod.rs
slepau/auth/src/user/: blacklist.rs  mod.rs  src.rs
slepau/auth/src/validate/: flow.rs  mod.rs
slepau/chunk/: Cargo.toml
slepau/chunk/src/: ends.rs  format.rs  lib.rs  main.rs  socket.rs
slepau/chunk/src/db/: chunk.rs  dbchunk.rs  def.rs  mod.rs  tests.rs  user_access.rs  view.rs
slepau/lasna/: Cargo.toml
slepau/lasna/src/: client.rs  device.rs  error.rs  main.rs  server.rs
slepau/media/: Cargo.toml
slepau/media/src/: ends.rs  lib.rs  main.rs  socket.rs
slepau/media/src/db/: def.rs  meta.rs  mod.rs  task.rs  version.rs  view.rs
slepau/media/src/db/task/: convert.rs  mod.rs
slepau/samn/: Cargo.toml  readme.md
slepau/samn/src/: ends.rs  logging.rs  main.rs  radio.rs  socket.rs  views.rs
slepau/samn/src/db/: mod.rs  schedule.rs  tests.rs
slepau/samn/src/hq/: cc1101.rs  leds.rs  mod.rs  nrf24.rs
slepau/samn/src/radio/: cc1101.rs  mod.rs  nrf24.rs
slepau/vreji/: Cargo.toml  readme.md
slepau/vreji/src/: ends.rs  main.rs
slepau/zarci/: Cargo.toml  readme.md
slepau/zarci/src/: main.rs
slepau/zarci/src/store/: defs.rs  mod.rs
src/: main.rs
