[package]
name = "common"
version.workspace = true
edition.workspace = true


[dependencies]
hyper.workspace =true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
lazy_static.workspace =true
rand.workspace = true
proquint.workspace = true
diff.workspace = true
reqwest = "0.11.12"
env_logger.workspace = true
regex = "1.7.1"
