[package]
name = "common"
description = "Code "
license = "MIT"
version.workspace = true
edition.workspace = true


[dependencies]
hyper.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
lazy_static.workspace = true
rand.workspace = true
proquint.workspace = true
diff.workspace = true
env_logger.workspace = true
samn-common = {path = "../embedded/samn-common", features = ["sonnerie"]}
regex = "1.7.1"
psl = "2.1.3"
sonnerie = "0.8.6"
chrono = "0.4.28"
postcard = "1.0.8"
base64 = "0.22.0"
