[package]
name = "auth"
version.workspace = true
edition.workspace = true


[lib]

[dependencies]
common.workspace = true
hyper.workspace = true
tower = {workspace = true, features = ['timeout', 'load-shed']}
tower-http.workspace =true
lazy_static.workspace = true
time = "0.3.17"
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
argon2 = "0.4.1"
pasetors = "0.6.3"
rand.workspace =true
