[package]
name = "chunk"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
auth = { path = "../auth" }
common.workspace = true
axum.workspace = true
tokio.workspace = true
hyper.workspace = true
tower-http.workspace =true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
pulldown-cmark = "0.9.2"
regex = "1.6.0"
futures = "0.3.24"
headers = "0.3.8"