[package]
name = "media"
license = "MIT"
version = "0.2.0"
edition.workspace = true

[lib]

[dependencies]
auth = { path = "../auth" }
common.workspace = true
axum.workspace = true
axum-macros.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
hyper.workspace = true
proquint.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
lazy_static.workspace = true
infer = "0.12.0"
tokio-util = {version = "0.7.4", features = ["io"]}
image = {version= "0.24.5", features = ["avif-encoder", "webp-encoder"]}
num_cpus = "1.15.0"
mime = "0.3.16"
futures = "0.3.26"
kamadak-exif = "0.5.5"
base64 = "0.21.0"

