[package]
name = "samn"
license = "MIT"
version.workspace = true
edition.workspace = true

[dependencies]
auth = { path = "../auth" }
common.workspace = true
hyper.workspace = true
tower = { workspace = true, features = [] }
tower-http.workspace = true
lazy_static.workspace = true
tower_governor.workspace = true
time = "0.3.17"
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
argon2 = "0.4.1"
pasetors = "0.6.3"
rand.workspace = true
futures-util = "0.3.26"
sonnerie = "0.8.4"
chrono = "0.4.28"
samn-common = {path = "../../embedded/samn-common"}
linux-embedded-hal = { version = "0.4.0", features = ["spi"] }
postcard = {version = "1.0.8", features = ["use-std"]}
nb = "1.1.0"
