[package]
name = "samn"
license = "MIT"
version.workspace = true
edition.workspace = true

[dependencies]
auth = { path = "../auth" }
common.workspace = true
hyper.workspace = true
tower = { workspace = true, features = [] }
tower-http.workspace = true
lazy_static.workspace = true
tower_governor.workspace = true
time.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
pasetors = "0.6.3"
rand.workspace = true
futures-util = "0.3.26"
chrono = "0.4.28"
samn-common = {path = "../../samn-common", features = ["std"]}
linux-embedded-hal = { version = "0.4.0", features = ["spi"] }
postcard = {git = "https://github.com/jamesmunns/postcard.git", features = ["use-std"]}
nb = "1.1.0"
futures = "0.3.26"
embedded-hal = "1.0.0"
bimap = { version = "0.6.3", features = ["serde"] }
sonnerie.workspace = true
