[package]
name = "zarci"
license = "MIT"
version.workspace = true
edition.workspace = true

[dependencies]
auth = { path = "../auth" }
common.workspace = true
hyper.workspace = true
tower = { workspace = true, features = [] }
tower-http.workspace = true
lazy_static.workspace = true
tower_governor.workspace = true
time.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
pasetors = "0.6.3"
rand.workspace = true
futures-util = "0.3.26"
sonnerie.workspace = true
nonmax = "0.5.5"
